@@ -1,3 +1,9 @@
+2011-08-25  Ben Bolker  <bolker@mcmaster.ca>
+
+	* better behavior when all CI limits are NA
+	* added legend.x argument to coefplot2 (i.e. can override default legend position)
+	* bug fixes for horizontal/vertical limit code
+
 2011-08-22  Ben Bolker  <bolker@mcmaster.ca>
 
 	* adjust horizontal/vertical limits and variable name positions for list-plots
